syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service KundeService {
}

message KundeDto {
    google.protobuf.Timestamp geburtsdatum = 1;
    int32 id = 2;
    string nachname = 3;
    bytes rowVersion = 4;
    string vorname = 5;
}
